[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
extend-exclude = '/(\.gitlab|doc|docs)/'
line-length = 100
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 100

[tool.coverage.report]
precision = 2

[tool.coverage.paths]
source = ["src/"]

[tool.flakehell]
baseline = "flakehell_baseline.txt"
doctests = true
enable_extensions = "G"
format = "colored"
show_source = true
statistics = false

accept_encodings = "utf-8"
docstring_style = "google"
inline_quotes = "double"
max_complexity = 6
max_line_length = 100

[tool.flakehell.plugins]
"flake8-*" = [
  "+*",
  "-D401", # Ignore grammar
  "-RST*", # Disable RST as we use google docstrings
]
"flake8-commas" = [
  "+*",    # Allow missing trailing commas to be compatible to black
  "-C812",
  "-C813",
  "-C815",
  "-C816",
]
flake8-docstrings = [
  "-D400", # Don't require period in first line
]
mccabe = ["+*"]
"pep8-naming" = ["+*"]
pycodestyle = [
  "+*",    # This rule does not comply with PEP 8
  "-W503", # Ignore whitespace before ':' to be compatible to black
  "-E203",
]
pyflakes = ["+*"]
pylint = ["+*"]


[tool.flakehell.exceptions."**/__init__.py"]
pyflakes = ["-F401"] # Allow unused imports

[tool.flakehell.exceptions."**/exceptions.py"]
flake8-docstrings = ["-D101"] # Exceptions don't need docstrings

[tool.flakehell.exceptions."**/test_*.py"]
flake8-bandit = ["-S101"]  # S101: Allow asserts in tests
flake8-docstrings = ["-*"] # Tests don't need docstrings
